# GL.iNet-Log-Analyzer

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.verify-data/reports/: demo-report.json
deploy/: Caddyfile  nginx.conf
src/glinet_log_analyzer/: __init__.py  analyzer.py  asgi.py  cli.py  ingest.py  models.py  reporting.py  storage.py  web.py
src/glinet_log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/glinet_log_analyzer/templates/: index.html
tests/: test_analyzer.py
